# quize-management_new

./: CMakeLists.txt  README.md  diagram.puml  main.cpp  time.cpp
include/models/: Admin.cpp  Admin.h  Question.cpp  Question.h  Quiz.cpp  Quiz.h  Result.cpp  Result.h  Student.cpp  Student.h  User.cpp  User.h  Utility.cpp  Utility.h
include/quiz/: cse.txt  niloy.txt  q.txt  quiz1.txt
include/views/: MainView.cpp  MainView.h  StudentPortal.cpp  StudentPortal.h
include/views/adminviews/: AdminPortal.cpp  AdminPortal.h  LoginRegister.h  welcome.h
include/views/studentviews/: LoginRegister.h  StudentPortal.cpp  StudentPortal.h  welcome.h
result/quiz/: niloy.txt  quiz1.txt  quize_001.txt
result/student/: 328.txt  aa.txt  ss.txt
